# essentialmix

./: .gitignore  .pre-commit-config.yaml  mypy_local_hook  pyproject.toml
.github/workflows/: test.yml
essentialmix/cli/chat/: client.py  common.py  server.py
essentialmix/core/: embed.py  layers.py  llm.py  log.py  plot.py  tokenize.py  torch_utils.py  utils.py
essentialmix/core/lm/: base.py  torch_lm.py
essentialmix/core/registry/: __init__.py  registry.py
essentialmix/experiments/: guided_diffusion.ipynb
essentialmix/experiments/guided_diffusion/: common.py  diffusion.py  imagenet.py  lsun_bedroom.py  lsun_bedroom_interpolate.py  model.py
essentialmix/models/: gpt.py  gpt2.py
tests/: self_test.py  test_chat.py  test_layers.py  test_log.py  test_registry.py  test_self.py
