[project]
name = "essentialmix"
authors = [
    {name = "Lorenzo Pratissoli", email = "lorenzo.pratissoli@outlook.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "aiohttp",
    "cattrs",
    "click",
    "einops",
    "matplotlib",
    "numpy",
    "tiktoken",
    "torch",
    "transformers",
    "uvloop",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools]
packages = ["essentialmix"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
scripts_are_modules = true
disable_error_code = [
    # Allow Type[T] where T is abc.ABC
    "type-abstract"
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = [
    "E501"  # Line too long
]

fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM",
    "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF",
    "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]
unfixable = []

exclude = [
    # Custom
    "essentialmix/experiments/guided_diffusion/model.py",

    # Defaults
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pydocstyle]
convention = "google"

[tool.ruff.pydocstyle]
convention = "google"
